# my-project

./: .gitignore  CLAUDE.md  README.md
docs/decisions/: modular_data_ingestion.md
docs/modules/: op25_integration.md  phase1a.md  sdrtrunk_integration_module.md  trm.md
docs/notes/: phase1a_progress.md  radio_info.md
docs/specs/: albatross_base_system.md  phase1b.md  phasing.md  radio_pipeline_spec.md
prototypes/: zmq_bridge.py
prototypes/op25_integration_skeleton/: README.md  pyproject.toml
prototypes/op25_integration_skeleton/src/op25_integration/: __init__.py  audio_buffer.py  call_tracker.py  config.py  event_bus.py  json_listener.py  main.py  models.py  packet_assembler.py  storage.py
prototypes/phase1a_capture_skeleton/: README.md  pyproject.toml
prototypes/phase1a_capture_skeleton/src/: main.py
prototypes/phase1a_capture_skeleton/src/capture_pipeline/: __init__.py  buffer_manager.py  config.py  flowgraph.py  models.py  packet_emitter.py  runtime.py  wav_writer.py  zmq_subscribers.py
prototypes/phase1a_capture_skeleton/src/phase1a_capture_skeleton.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
prototypes/phase1a_capture_skeleton/tests/: test_buffer_manager.py  test_runtime.py
prototypes/phase1a_capture_v2/: README.md  flowgraph.py  tsbk_dump.py  zmq_bridge.py
prototypes/phase1a_capture_v2/mnt/data/phase1a_capture_v2/: README.md
prototypes/phase1a_capture_v2/phase1a/: __init__.py  capture_backend.py  models.py  packet_builder.py  run_backend.py  settings.py  tsbk.py
prototypes/phase1a_capture_v2/tests/: test_buffer_manager.py
(+5 files in other folders)
